<?xml version="1.0"?>
<package format="2">
  <name>rotors_granso_scenarios</name>
  <version>0.0.1</version>
  <description>The rotors_granso_scenarios package</description>
  <maintainer email="john.tornblom@liu.se">John Törnblom</maintainer>
  <license>APL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rotors_description</exec_depend>
  <exec_depend>rotors_gazebo</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>mav_nonlinear_mpc</exec_depend>
  <exec_depend>mav_disturbance_observer</exec_depend>
  <exec_depend>mav_lowlevel_attitude_controller</exec_depend>
  
  <exec_depend>rviz</exec_depend>
  <export>
  </export>
</package>
